# crossref-mcp-server

./: .env.example  README.md  pyproject.toml  server.json
src/crossref_mcp_server/: __init__.py  server.py
