[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crossref-mcp-server"
version = "1.0.0"
description = "MCP server for the Crossref API — search and retrieve scholarly metadata"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "SMABoundless" }]
keywords = ["mcp", "crossref", "scholarly", "doi", "citations"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "requests>=2.28.0",
]

[project.scripts]
crossref-mcp-server = "crossref_mcp_server:main"

[project.urls]
Repository = "https://github.com/SMABoundless/crossref-mcp-server"
